--- a/code-editor.html
+++ b/code-editor.html
@@ -58,6 +58,10 @@
     <textarea class="editor" id="codeInput" placeholder="<html>\n  <head>...</head>\n  <body>...</body>\n</html>"></textarea>
     <iframe class="preview" id="preview"></iframe>
   </div>
+  <div style="background:#121212; padding:10px; display:flex; gap:10px; justify-content:center;">
+  <button onclick="saveCode()">💾 Save Code</button>
+  <button onclick="loadCode()">📂 Load Code</button>
+  </div>
   <footer>✨ Live Preview Enabled | V2 – The Code Awakens</footer>
   <script>
     const input = document.getElementById("codeInput");
@@ -82,6 +86,21 @@ input.value = `<!DOCTYPE html>
 </body>
 </html>`;
     preview.srcdoc = input.value;
+    function saveCode() {
+  localStorage.setItem('zodex_code', input.value);
+  alert('✅ Code saved!');
+}
+
+function loadCode() {
+  const saved = localStorage.getItem('zodex_code');
+  if (saved) {
+    input.value = saved;
+    preview.srcdoc = saved;
+    alert('📂 Code loaded!');
+  } else {
+    alert('❌ No saved code found!');
+  }
+}
   </script>
 </body>
 </html>
