--- a/builder.html
+++ b/builder.html
@@ -13,7 +13,7 @@
   </header>
 
   <main>
-    <div class="mode-card" onclick="openEditor('code')">
+    <div class="mode-card" onclick="window.location.href='code-editor.html'">
       <h2>Code Mode</h2>
       <p>Use HTML, CSS, JS or XML to code your app directly.</p>
     </div>
